# rust-path-tracer

./: Cargo.toml
benches/: my_bench.rs
src/: VecUtil.rs  aabb.rs  camera.rs  lehmer.rs  lib.rs  main.rs  material.rs  ray.rs  vecutil.rs  world.rs
src/primitives/: intersect.rs  mod.rs  sphere.rs
