[package]
name = "rust-path-tracing"
version = "0.1.0"
authors = ["Trym Kristiansen <trym@trymk.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = false
opt-level=3

[profile.release]
lto = true
opt-level=3

[dependencies]
glam = "0.8.7"
image = "0.23.4"
rand = "0.7.3"
scoped_threadpool = "0.1.9"