[package]
name = "pathtrace"
version = "0.1.0"
authors = ["Trym Kristiansen <trym@trymk.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
lto = false
opt-level=3

[profile.release]
lto = true
opt-level=3

[dependencies]
glam = "0.8.7"
image = "0.23.4"
rand = { version = "0.7.3", features = ["small_rng"] }
scoped_threadpool = "0.1.9"
nalgebra = "0.20.0"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "my_bench"
harness = false